[gd_scene load_steps=11 format=3 uid="uid://bk7y4rj5m0dx3"]

[ext_resource type="Script" uid="uid://rny6traatt0l" path="res://Scripts/terry.gd" id="1_3p6b6"]
[ext_resource type="Texture2D" uid="uid://bhoke6go3jkv6" path="res://Assets/sprites/terry_animated.png" id="1_4swkh"]
[ext_resource type="Texture2D" uid="uid://1xc1uxi1o6gu" path="res://Assets/sprites/blackness.png" id="3_v1w1x"]

[sub_resource type="Animation" id="Animation_3p6b6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_v1w1x"]
resource_name = "fly"

[sub_resource type="Animation" id="Animation_4swkh"]
resource_name = "talk"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v1w1x"]
_data = {
&"RESET": SubResource("Animation_3p6b6"),
&"fly": SubResource("Animation_v1w1x"),
&"talk": SubResource("Animation_4swkh")
}

[sub_resource type="Animation" id="Animation_h14y4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.436332]
}

[sub_resource type="Animation" id="Animation_osmod"]
resource_name = "rotate"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.766667, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.436332, 0.436332, -0.436332]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_07yh7"]
_data = {
&"RESET": SubResource("Animation_h14y4"),
&"rotate": SubResource("Animation_osmod")
}

[node name="Terry" type="Node2D" node_paths=PackedStringArray("terry")]
script = ExtResource("1_3p6b6")
terry = NodePath("Sprite")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_v1w1x")
}

[node name="rotation_anims" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_07yh7")
}
autoplay = "rotate"

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Sprite" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Sprite"]
rotation = -0.436332
texture = ExtResource("1_4swkh")
hframes = 2

[node name="high" type="Node2D" parent="Sprite"]
position = Vector2(390, 157)

[node name="low" type="Node2D" parent="Sprite"]
position = Vector2(967, 903)

[node name="high2" type="Node2D" parent="Sprite"]
position = Vector2(1674, 159)

[node name="voice_lines" type="AudioStreamPlayer" parent="."]

[node name="Blackness" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("3_v1w1x")

[node name="blackness_pos" type="Node2D" parent="."]
position = Vector2(1, 1)

[node name="fade_timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="voice_lines" to="." method="_on_voice_lines_player_finished"]
[connection signal="timeout" from="fade_timer" to="." method="_on_fade_timer_timeout"]
